# ProjectIppocrate

./: .gitignore  Ippocrate.txt  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: nextjs.yml  node.js.yml  rust.yml
assets/: report_1711877414.7964003.html
backend/: Cargo.toml  Dockerfile  Makefile.linux  Makefile.win  railway.toml
backend/Benchmark/: locustfile.py
backend/Benchmark/reports/report-1/: readme.txt  report.html
backend/Benchmark/reports/report-2/: readme.txt  report.html
backend/Benchmark/reports/report-3/: readme.txt  report.html
backend/Benchmark/reports/report-4/: readme.txt  report.html
backend/Benchmark/reports/report-5/: readme.txt  report.html
backend/Benchmark/reports/report-6/: readme.txt  report.html
backend/src/: auth.rs  config.rs  data.rs  error_manager.rs  main.rs  model.rs  redis.rs  sanitizer.rs
frontend/: .dockerignore  Dockerfile  bun.lockb  next.config.mjs  package-lock.json  package.json  railway.toml  tailwind.config.js  tailwind.config.ts
frontend/src/app/: globals.css  layout.js  layout.tsx  not-found.tsx  page.js  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/admin/create_page/: page.tsx
frontend/src/app/admin/dashboard/: page.tsx
frontend/src/app/admin/delete_page/: page.tsx
frontend/src/app/api/: api.ts
frontend/src/app/component/: MainTitle.js  Navbar.js
frontend/src/app/components/: button_see_more.tsx  card_body.tsx  divider.tsx  loader.tsx  main_body.tsx  main_title.tsx  navbar.tsx
frontend/src/app/credits/: page.tsx
frontend/src/app/pages/: page.tsx
frontend/src/app/subject_list/: page.tsx
frontend/src/app/template/: page.jsx  page.tsx
frontend/src/components/: button_see_more.tsx  card_body.tsx  divider.tsx  main_body.tsx  navbar.tsx
frontend/src/components/AcernityUI/: bentogrid.tsx  globe.tsx
frontend/src/components/ui/: button.tsx  command.tsx  resizable.tsx  skeleton.tsx
frontend/src/context/: Providers.tsx  page_provider.tsx  session_provider.tsx
frontend/src/data/: data.js  data.tsx
frontend/src/utils/: cn.ts
(+25 files in other folders)
