[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
redis = { version = "0.25.2", features = ["json","tokio-native-tls-comp"] }
env_logger = "0.11.3"
log = "0.4.21"
serde_json = "1.0.115"
tokio = { version = "1.37.0",features = ["full"] }
serde = { version = "1.0.197",features = ["derive"] }
deadpool-redis = "0.14.0"
