[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["@akiidjk", "@danmig06"]


[dependencies]
actix-web = "4.5.1" # Framework for web server
tokio = { version = "1.37.0",features = ["full"] } # Async
redis = { version = "0.25.2", features = ["json","tokio-native-tls-comp"] } # Redis client
deadpool-redis = "0.14.0" # Redis pool
env_logger = "0.11.3" # Logger
log = "0.4.21" # Logger
serde_json = "1.0.115" # JSON
serde = { version = "1.0.197",features = ["derive"] } # JSON


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html